fixed issue where navbar hamburger icon would not be displayed on smaller screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,34 +1,38 @@
-                      :host {
-                         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-                         font-size: 14px;
-                         color: #333;
-                         box-sizing: border-box;
-                         -webkit-font-smoothing: antialiased;
-                         -moz-osx-font-smoothing: grayscale;
-                     }
-                     
-                     body {
-                         font-family: 'Source Sans Pro', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-                     }
-                     
-                     .navbarBackgroundColor {
-                         background-color: #FFC11E;
-                     }
-                     
-                     .cibusImg {
-                         background-position: center bottom;
-                         background-repeat: no-repeat;
-                         background-size: contain;
-                         width: 100%;
-                         height: auto;
-                     }
-                     
-                     .navLinkStyle {
-                         color: white;
-                         font-weight: bold;
-                         font-size: 1.5em;
-                     }
-                     
-                     .navLinkStyle:hover {
-                         opacity: 0.7;
-                     }
+                              :host {
+                                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+                                 font-size: 14px;
+                                 color: #333;
+                                 box-sizing: border-box;
+                                 -webkit-font-smoothing: antialiased;
+                                 -moz-osx-font-smoothing: grayscale;
+                             }
+                             
+                             body {
+                                 font-family: 'Source Sans Pro', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+                             }
+                             
+                             .navbarBackgroundColor {
+                                 background-color: #fdba11;
+                             }
+                             
+                             .cibusImg {
+                                 background-position: center bottom;
+                                 background-repeat: no-repeat;
+                                 background-size: contain;
+                                 width: 100%;
+                                 height: auto;
+                             }
+                             
+                             .navLinkStyle {
+                                 color: white;
+                                 font-weight: bold;
+                                 font-size: 1.5em;
+                             }
+                             
+                             .navLinkStyle:hover {
+                                 opacity: 0.7;
+                             }
+                             
+                             .icon-bar {
+                                 background-color: white;
+                             }
